Fix content spacing as requested Move Date to footer use <time> tag which may aid search engines

--- a/css/default.css
+++ b/css/default.css
@@ -126,7 +126,6 @@ tr.bugnote .time-tracked,
 #project-selector select{ font-size: small; line-height: 1em; }
 #project-selector .button { font-size: small; line-height: 1em; padding: 0; margin: 0; }
 
-#current-time{ width: 20%; margin: 0 auto; text-align: center; }
 
 .manage-menu, .account-menu, .summary-menu , .graphs-menu, .manage-config-menu { float: left; width: 100%; margin: 0; padding: 0; font-size: 1em; position: relative }
 .manage-menu ul, .manage-config-menu ul, .summary-menu ul, .graphs-menu ul { clear: left; float: left; list-style: none; position: relative; left: 50%; padding: 0; margin: 0; text-align: center; }
@@ -267,23 +266,36 @@ div.quick-summary-right	{ width: 49%; padding: 2px; text-align: right; float: ri
 .progress400 .bar			{ display: block; position: relative; background: #6bba70; text-align: center; font-weight: normal; color: #333; height: 2em; line-height: 2em; }
 
 #footer {
+	display: block;
 	font-family: Verdana, Arial, Helvetica, sans-serif;
 	font-size: 8pt;
 	margin-top: 2em;
 	clear: both;
+	border-top: 1px solid #333333;
+	width: 100%;
+	padding: 0;
 }
 
-#footer #powered-by-mantisbt-logo {
+#footer-center{
+	display: inline-block;
+	width: 33%;
+	margin: 0;
+	padding: 0;
+	line-height: 0.2em;
+	text-align: center;
+}
+
+#powered-by-mantisbt-logo {
 	float: right;
 }
 
-#footer address {
-	font-style: normal;
-	margin-top: 0.5em;
-	margin-bottom: 0.5em;
+#mantisbt-address {
+	float: left;
+	width: 33%;
 }
 
-#footer #user-copyright {
+
+#user-copyright, #mantisbt-copyright {
 	font-size: 9pt;
 }
 
